getting youtube data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,29 @@
 <div class="container">
-  <div class="row">
-      <VideoSearch></VideoSearch>
-  </div>
+    <div class="row">
+        <div class="col-md-12">
+            <VideoSearch></VideoSearch>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-8">
-            <section>
-                Video
-            </section>
-            <section>
-                Video Details
-            </section>
-            <section>
-                Comments
-            </section>
+            <div class="wrapper">
+                <section>
+                    Video
+                </section>
+                <section>
+                    Video Details
+                </section>
+                <section>
+                    Comments
+                </section>
+            </div>
         </div>
         <div class="col-md-4">
-            <section>
-                Video List
-            </section>
+            <div class="wrapper">
+                <section>
+                    Video List
+                </section>
+            </div>
         </div>
     </div>
 </div>
