--- a/src/app/components/VideoSearch/videosearch.component.html
+++ b/src/app/components/VideoSearch/videosearch.component.html
@@ -1,6 +1,6 @@
 <div class="input-group">
-    <input type="text" class="form-control" placeholder="Search for...">
+    <input type="text" class="form-control" placeholder="Search for..." #search>
     <span class="input-group-btn">
-        <button class="btn btn-secondary" type="button">on YouTube</button>
+        <button class="btn btn-primary" type="button" (click)="youtubeSearch(search.value)">on YouTube</button>
       </span>
 </div>
