videos and lists implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,19 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <VideoSearch></VideoSearch>
+            <VideoSearch (onSearch)="setVideoList($event)"></VideoSearch>
         </div>
     </div>
-    <div class="row">
+    <div class="row" *ngIf="selectedVideo" >
         <div class="col-md-8">
             <div class="wrapper">
-                <section>
-                    Video
-                </section>
-                <section>
-                    Video Details
-                </section>
-                <section>
-                    Comments
-                </section>
+                <VideoDetail *ngIf="selectedVideo" [selectedVideo]="selectedVideo"></VideoDetail>
             </div>
         </div>
         <div class="col-md-4">
             <div class="wrapper">
                 <section>
-                    Video List
+                    <VideoList (VideoSelect)="setSelectedVideo($event)" *ngIf="videos" [videos]="videos"></VideoList>
                 </section>
             </div>
         </div>
